--- a/server/src/package.json
+++ b/server/src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ."
+    "dev": "nodemon ./src"
   },
   "author": "UNIZAR-30226-2024-02",
   "license": "MIT",
