no habia caido que está sleep en un bucle infinito

--- a/.github/workflows/build_back_end.yaml
+++ b/.github/workflows/build_back_end.yaml
@@ -27,3 +27,6 @@ jobs:
       run: |
         cd server/src 
         npm run dev
+        sleep 10
+    - name: Check build status
+      run: echo "Build successful. Continuing with the workflow."
