--- a/server/src/package.json
+++ b/server/src/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src"
+    "dev": "nodemon ./src",
+    "test": "jest"
   },
   "author": "UNIZAR-30226-2024-02",
   "license": "MIT",
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mongoose": "^8.1.3"
   }
 }
