--- a/server/src/package.json
+++ b/server/src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "author": "UNIZAR-30226-2024-02",
   "license": "MIT",
