--- a/server/src/package.json
+++ b/server/src/package.json
@@ -15,6 +15,7 @@
     "supertest": "^6.3.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jest": "^29.7.0",
