--- a/server/src/package.json
+++ b/server/src/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "socket.io": "^4.7.5"
   }
 }
