--- a/server/src/package.json
+++ b/server/src/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src",
-    "test": "jest"
+    "test:compile": "jest compile.test.js",
+    "test:registro": "jest registro.login.test.js",
+    "test:partida": "jest partidas.test.js",
+    "test:skins": "jest skins.test.js",
+    "test:tienda":"jest tienda.test.js"
   },
   "author": "UNIZAR-30226-2024-02",
   "license": "MIT",
