--- a/.github/workflows/build_back_end.yaml
+++ b/.github/workflows/build_back_end.yaml
@@ -27,4 +27,5 @@ jobs:
     - name: Build and Test
       run: |
         cd server/src 
+        chmod u+x unitTestLinux.sh
         ./unitTestLinux.sh
