--- a/server/src/package.json
+++ b/server/src/package.json
@@ -9,7 +9,8 @@
     "test:registro": "jest registro.login.test.js",
     "test:partida": "jest partidas.test.js",
     "test:skins": "jest skins.test.js",
-    "test:tienda":"jest tienda.test.js"
+    "test:tienda":"jest tienda.test.js",
+    "test:all": "npm run test:compile && npm run test:registro && npm run test:partida && npm run test:skins && npm run test:tienda"
   },
   "author": "UNIZAR-30226-2024-02",
   "license": "MIT",
