Obtener invitaciones de un usuario & test unitarios
- Funcionalidad que permite obtener todas las invitaciones a partidas de un usuario
- Tests unitarios para listar amistades y listar solicitudes. Además, se ha incrementado la robusted de test de amistad anteriores (debido a que ahora podemos usar el listar).
- Cuando se hagan los tests de invite y join, se harán el test de invitacione.

--- a/server/src/package.json
+++ b/server/src/package.json
@@ -10,7 +10,8 @@
     "test:partida": "jest partidas.test.js",
     "test:skins": "jest skins.test.js",
     "test:tienda":"jest tienda.test.js",
-    "test:all": "npm run test:compile && npm run test:registro && npm run test:partida && npm run test:skins && npm run test:tienda"
+    "test:amistad": "jest amistad.test.js",
+    "test:all": "npm run test:compile && npm run test:registro && npm run test:partida && npm run test:skins && npm run test:tienda && npm run test:amistad"
   },
   "author": "UNIZAR-30226-2024-02",
   "license": "MIT",
